discussion/kv_engine/181596/181596_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't submit disabled events to the audit daemon

Change-Id: I1eb473c4cc6cfa27597cd59b872e39dc06bcde9e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-20 19:50:59.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 20:17:23.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21345/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
    if (audit_eventid != NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON) {
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21345/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21345/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50568/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mcaudit.cc(320): error C2065: "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50568/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42421/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/eventdescriptor.h:72:10:
error: no type named "atomic_bool" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42421/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22796/ : FAILURE

Compile error at [2022-10-20T20:00:14.488Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11174/ : FAILURE

Compile error at [2022-10-20T20:00:14.983Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11174/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11078/ : FAILURE

Compile error at [2022-10-20T19:58:33.648Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
fatal error: "memcached_audit_events.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11078/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23778/ : FAILURE

Compile error at [2022-10-20T20:08:47.645Z] ../kv_engine/auditd/src/event.cc:105:24:
error: ?AuditDescriptorManager? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23778/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23375/ : FAILURE

Compile error at [2022-10-20T20:02:40.567Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23375/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24613/ : FAILURE

Compile error at [2022-10-20T20:06:20.755Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24613/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31797/ : FAILURE

Compile error at [2022-10-20T20:16:32.473Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31797/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20603/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
